// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view-form Renders \`view-form\` with custom props 1`] = `
<div>
  <div
    class="layout wrap justify-center"
  >
    <div
      class="flex xs12"
    >
      <c-name-field-stub
        label="Title"
        name="title"
        required="required"
        value="View title"
      />
      <div
        class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Description
              </label>
              <input
                aria-label="Description"
                name="description"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
      <c-enabled-field-stub
        value="true"
      />
      <periodic-refresh-field-stub
        label="Periodic refresh"
        name="periodic_refresh"
        periodicrefresh="[object Object]"
      />
    </div>
  </div>
  <div
    class="layout wrap justify-center"
  >
    <div
      class="flex xs12"
    >
      <div
        class="v-input v-text-field v-select v-select--chips v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Group tags
              </label>
              <div
                class="v-select__selections"
              >
                <span
                  class="v-chip v-chip--select-multi v-chip--removable theme--light"
                  tabindex="-1"
                >
                  <span
                    class="v-chip__content"
                  >
                    View tag
                    <div
                      class="v-chip__close"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        cancel
                      </i>
                    </div>
                  </span>
                </span>
                <input
                  aria-label="Group tags"
                  autocomplete="off"
                  role="combobox"
                  tags="tags"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--clear"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--link material-icons theme--light"
                  >
                    clear
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            />
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-input v-text-field v-select v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Choose a group, or create a new one
              </label>
              <input
                aria-label="Choose a group, or create a new one"
                autocomplete="off"
                name="group"
                role="combobox"
                type="text"
              />
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            />
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-form Renders \`view-form\` with default props 1`] = `
<div>
  <div
    class="layout wrap justify-center"
  >
    <div
      class="flex xs12"
    >
      <c-name-field-stub
        label="Title"
        name="title"
        required="required"
      />
      <div
        class="v-input v-text-field theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                aria-hidden="true"
                class="v-label theme--light"
                style="left: 0px; position: absolute;"
              >
                Description
              </label>
              <input
                aria-label="Description"
                name="description"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
      <c-enabled-field-stub />
      <periodic-refresh-field-stub
        label="Periodic refresh"
        name="periodic_refresh"
        periodicrefresh="[object Object]"
      />
    </div>
  </div>
  <div
    class="layout wrap justify-center"
  >
    <div
      class="flex xs12"
    >
      <div
        class="v-input v-text-field v-select v-select--chips v-autocomplete theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label theme--light"
                style="left: 0px; position: absolute;"
              >
                Group tags
              </label>
              <div
                class="v-select__selections"
              >
                <input
                  aria-label="Group tags"
                  autocomplete="off"
                  role="combobox"
                  tags="tags"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--link material-icons theme--light"
                  />
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            />
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-input v-text-field v-select v-autocomplete theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label theme--light"
                style="left: 0px; position: absolute;"
              >
                Choose a group, or create a new one
              </label>
              <input
                aria-label="Choose a group, or create a new one"
                autocomplete="off"
                name="group"
                role="combobox"
                type="text"
              />
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            />
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
